DuPont DevSB/src/objects/Initiative__c.object
<CustomObject>
    <description>Sell-side Project or Initiative</description>
    <fields>
        <fullName>Accountable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Leader ultimately accountable for the successful execution of this Initiative.</inlineHelpText>
        <label>Accountable</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Initiatives (Accountable)</relationshipLabel>
        <relationshipName>Initiatives1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Won_Opportunities__c</fullName>
        <description>Estimate of the Total Amount of annual revenue this Initiative will bring us through all Won Opportunities related to it. 
Usually estimated and approved with the sponsor at Initiative closing time.</description>
        <inlineHelpText>Estimate of the Total Amount of annual revenue this Initiative will bring us through all Won Opportunities related to it. 
Usually estimated and approved with the sponsor at Initiative closing time.</inlineHelpText>
        <label>Amount Won Opportunities</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <label>Approval Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>New Packaging-IFU/neck-label</fullName>
                </value>
                <value>
                    <fullName>Norms/Regulations</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Packaging-Artwork</fullName>
                </value>
                <value>
                    <fullName>Packaging-Labels/stickers</fullName>
                </value>
                <value>
                    <fullName>Product Stewardship</fullName>
                </value>
                <value>
                    <fullName>REACH</fullName>
                </value>
                <value>
                    <fullName>Revised Packaging-IFU/neck-label</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Translation</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attribute_Details__c</fullName>
        <description>Details of the Performance Attributes</description>
        <inlineHelpText>Details of the Performance Attributes</inlineHelpText>
        <label>Attribute Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auto_ID__c</fullName>
        <displayFormat>I-{00000000}</displayFormat>
        <label>Auto ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Barriers__c</fullName>
        <description>Barriers the Initiative is facing during the progression of the project</description>
        <inlineHelpText>Barriers the Initiative is facing during the progression of the project</inlineHelpText>
        <label>Barriers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Main communication channel this initiative is using</description>
        <inlineHelpText>Main communication channel this initiative is using</inlineHelpText>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Mail Campaign</fullName>
                </value>
                <value>
                    <fullName>eMail</fullName>
                </value>
                <value>
                    <fullName>Face to Face</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Paper Mail</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
                <value>
                    <fullName>Press-Advertisement</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Web-Advertising</fullName>
                </value>
                <value>
                    <fullName>Web-eLearning</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checklist__c</fullName>
        <label>Checklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DMX Transformation Project</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Actual__c</fullName>
        <description>Actual Estimated or financially validated cost of this Initiative (Out of Pocket from Start Date to this date)</description>
        <inlineHelpText>Actual Estimated or financially validated cost of this Initiative (Out of Pocket from Start Date to this date)</inlineHelpText>
        <label>Cost (Actual)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Estimate__c</fullName>
        <description>Estimated and/or budgeted total cost of this Initiative (i.e. (Out of Pocket money over the entire life cycle)</description>
        <inlineHelpText>Budgeted or estimated total cost of this Initiative (i.e. over the entire life cycle)</inlineHelpText>
        <label>Cost (Estimate)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Y1_Estimate__c</fullName>
        <description>Estimated and/or budgeted cost of this Initiative for the first year.</description>
        <label>Cost Y1 (Estimate)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Quality__c</fullName>
        <description>The state of completeness, validity, consistency, reliability and accuracy that makes data appropriate for a specific use)</description>
        <inlineHelpText>The state of completeness, validity, consistency, reliability and accuracy that makes data appropriate for a specific use)</inlineHelpText>
        <label>Data Quality</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Guess</fullName>
                </value>
                <value>
                    <fullName>Highlight</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Reliable</fullName>
                </value>
                <value>
                    <fullName>Update Requested</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_to_End__c</fullName>
        <formula>(TODAY()-End_Date__c) * -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to End</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of this Initiative</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration_Segment__c</fullName>
        <formula>IF( OR ( ISNULL ( Start_Date__c ),ISNULL( End_Date__c )),&quot;Not Defined&quot;,(
IF( Initiative_Duration__c  &lt; 0,&quot;Error&quot;,(
IF( Initiative_Duration__c  &lt; 90,  &quot;&lt;03 Months&quot;,(
IF( Initiative_Duration__c &lt; 365, &quot;&lt;12 Months&quot;,&quot;&gt;12 Months&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Type of Duration for this Initiative (Grouping based on the number of days between Start and End Date)</inlineHelpText>
        <label>Duration Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effort_Actual__c</fullName>
        <description>Actual total number of days of work required by the Initiative</description>
        <inlineHelpText>Number of working days actually consumed by the Initiative</inlineHelpText>
        <label>Effort (Actual)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effort_Current__c</fullName>
        <description>Total Percentage of time (Full Time Equivalent) currently consumed by this Initiative across team members involved in it.</description>
        <inlineHelpText>Total Percentage of time (Full Time Equivalent) currently consumed by this Initiative across team members involved in it.</inlineHelpText>
        <label>Effort (Current)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Effort_Estimate__c</fullName>
        <description>Estimated total number of days of work required by the Initiative</description>
        <inlineHelpText>Estimated total number of days of work required by the Initiative</inlineHelpText>
        <label>Effort (Estimate)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date of this Initiative</description>
        <inlineHelpText>Actual End Date of this specific Initiative (can be different from &quot;Planned End Date&quot;</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Use__c</fullName>
        <label>End Use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>517 TYPAR PACKAGING</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Apparel Roll Goods</fullName>
                </value>
                <value>
                    <fullName>Armored Vehicles</fullName>
                </value>
                <value>
                    <fullName>Auto Belts</fullName>
                </value>
                <value>
                    <fullName>Auto Hose</fullName>
                </value>
                <value>
                    <fullName>Ballistics</fullName>
                </value>
                <value>
                    <fullName>Body Armour</fullName>
                </value>
                <value>
                    <fullName>Canal cleaning and maintenance</fullName>
                </value>
                <value>
                    <fullName>Cleanroom</fullName>
                </value>
                <value>
                    <fullName>Clean Room</fullName>
                </value>
                <value>
                    <fullName>Cleanroom-Roll Goods</fullName>
                </value>
                <value>
                    <fullName>Consumer Apparel</fullName>
                </value>
                <value>
                    <fullName>Contaminated plant / building clean up</fullName>
                </value>
                <value>
                    <fullName>Cutting</fullName>
                </value>
                <value>
                    <fullName>Emergency rescue</fullName>
                </value>
                <value>
                    <fullName>Envelope</fullName>
                </value>
                <value>
                    <fullName>Explosives Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Exterior</fullName>
                </value>
                <value>
                    <fullName>Fascias &amp; Panels</fullName>
                </value>
                <value>
                    <fullName>Fibre glass</fullName>
                </value>
                <value>
                    <fullName>Fire &amp; Emergency</fullName>
                </value>
                <value>
                    <fullName>Fire fighting - industrial</fullName>
                </value>
                <value>
                    <fullName>Fire fighting - non industrial</fullName>
                </value>
                <value>
                    <fullName>Fire fighting - wild life</fullName>
                </value>
                <value>
                    <fullName>Flashing</fullName>
                </value>
                <value>
                    <fullName>Geotextiles</fullName>
                </value>
                <value>
                    <fullName>Hose, Tubing &amp; Cable</fullName>
                </value>
                <value>
                    <fullName>Hose Industrial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography_Comment__c</fullName>
        <label>Geography Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>Targeted Geographical scope of this initiative</description>
        <inlineHelpText>Targeted Geographical scope of this initiative (Region or Region-Subregion)</inlineHelpText>
        <label>Geography</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AP-ANZ</fullName>
                </value>
                <value>
                    <fullName>AP-ASEAN</fullName>
                </value>
                <value>
                    <fullName>AP-EA</fullName>
                </value>
                <value>
                    <fullName>AP-EA-ASEAN</fullName>
                </value>
                <value>
                    <fullName>AP-EA-ASEAN-ANZ</fullName>
                </value>
                <value>
                    <fullName>AP-EA-ASEAN-Cambodia/Laos/Myanmar</fullName>
                </value>
                <value>
                    <fullName>AP-EA-ASEAN-Indonesia</fullName>
                </value>
                <value>
                    <fullName>AP-EA-ASEAN-Malaysia</fullName>
                </value>
                <value>
                    <fullName>AP-EA-ASEAN-Philippines</fullName>
                </value>
                <value>
                    <fullName>AP-EA-ASEAN-Singapore</fullName>
                </value>
                <value>
                    <fullName>AP-EA-ASEAN-Thailand</fullName>
                </value>
                <value>
                    <fullName>AP-EA-ASEAN-Vietnam</fullName>
                </value>
                <value>
                    <fullName>AP-EA-Japan</fullName>
                </value>
                <value>
                    <fullName>AP-EA-Korea</fullName>
                </value>
                <value>
                    <fullName>AP-GCHINA</fullName>
                </value>
                <value>
                    <fullName>AP-GChina-China</fullName>
                </value>
                <value>
                    <fullName>AP-GChina-HK</fullName>
                </value>
                <value>
                    <fullName>AP-GChina-Taiwan</fullName>
                </value>
                <value>
                    <fullName>AP-INDIA</fullName>
                </value>
                <value>
                    <fullName>AP-JAPAN</fullName>
                </value>
                <value>
                    <fullName>AP-KOREA</fullName>
                </value>
                <value>
                    <fullName>AP-SA</fullName>
                </value>
                <value>
                    <fullName>AP-SA-Bangladesh</fullName>
                </value>
                <value>
                    <fullName>AP-SA-India</fullName>
                </value>
                <value>
                    <fullName>AP-SA-Sri Lanka</fullName>
                </value>
                <value>
                    <fullName>ASPAC</fullName>
                </value>
                <value>
                    <fullName>CHINA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Start_Date__c</fullName>
        <label>Implementation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InitiativeNumber__c</fullName>
        <displayFormat>IN-{00000}</displayFormat>
        <label>Initiative #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Initiative_Details_rtf__c</fullName>
        <description>Additional details regarding this Initiative (may include formatting or pictures)</description>
        <label>Initiative Details</label>
        <length>15000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Initiative_Duration__c</fullName>
        <description>Number of days between the Start and End Date of this Initiative.</description>
        <formula>((End_Date__c) - (Start_Date__c))+1</formula>
        <inlineHelpText>Number of days between the Start and End Date of this Initiative.</inlineHelpText>
        <label>Initiative Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initiative_Group__c</fullName>
        <description>Group of Initiatives this Initiative belongs to</description>
        <label>Initiative Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGCP-CPC</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BI-Landscape Systems</fullName>
                </value>
                <value>
                    <fullName>DEC</fullName>
                </value>
                <value>
                    <fullName>DPT</fullName>
                </value>
                <value>
                    <fullName>DPT-A&amp;HF</fullName>
                </value>
                <value>
                    <fullName>DPT-Agriculture</fullName>
                </value>
                <value>
                    <fullName>DPT-Air and Filtration</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids</fullName>
                </value>
                <value>
                    <fullName>DPT-ASPS</fullName>
                </value>
                <value>
                    <fullName>DPT-Automotive</fullName>
                </value>
                <value>
                    <fullName>DPT-Chemical Industrial</fullName>
                </value>
                <value>
                    <fullName>DPT Cleanroom/Pharma</fullName>
                </value>
                <value>
                    <fullName>DPT-Cleanroom/Pharma</fullName>
                </value>
                <value>
                    <fullName>DPT-Covers</fullName>
                </value>
                <value>
                    <fullName>DPT-Critical Clean</fullName>
                </value>
                <value>
                    <fullName>DPT-DPP</fullName>
                </value>
                <value>
                    <fullName>DPT-Envelopes</fullName>
                </value>
                <value>
                    <fullName>DPT-ES</fullName>
                </value>
                <value>
                    <fullName>DPT-Graphics</fullName>
                </value>
                <value>
                    <fullName>DPT-Ind Pkg &amp; Protection</fullName>
                </value>
                <value>
                    <fullName>DPT-Mechanical Industrial</fullName>
                </value>
                <value>
                    <fullName>DPT-Medical Fabrics</fullName>
                </value>
                <value>
                    <fullName>DPT-Medical Packaging</fullName>
                </value>
                <value>
                    <fullName>DPT-Medical Specialties</fullName>
                </value>
                <value>
                    <fullName>DPT-NOW</fullName>
                </value>
                <value>
                    <fullName>DPT-Optical</fullName>
                </value>
                <value>
                    <fullName>DPT-PM</fullName>
                </value>
                <value>
                    <fullName>DPT-Public Sector-ER</fullName>
                </value>
                <value>
                    <fullName>DPT-Public Sector-LE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Involved_Org__c</fullName>
        <description>Organisations involved in this Initiative</description>
        <label>Involved Org</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABS</fullName>
                </value>
                <value>
                    <fullName>AGCP</fullName>
                </value>
                <value>
                    <fullName>AGCP-CPC</fullName>
                </value>
                <value>
                    <fullName>AGNH</fullName>
                </value>
                <value>
                    <fullName>AGNH-Qualicon</fullName>
                </value>
                <value>
                    <fullName>All DuPont</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BI-Env</fullName>
                </value>
                <value>
                    <fullName>BI-Surf</fullName>
                </value>
                <value>
                    <fullName>CORP</fullName>
                </value>
                <value>
                    <fullName>CR&amp;D</fullName>
                </value>
                <value>
                    <fullName>DCF</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-Aniline</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-DAHS</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-DWT</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-Industrial</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-Cyanides</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-MAP/DMS</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-RMS</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-SET</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-Vazo</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Clean Agent Fire Extinguishants</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Electronic Gases</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Fluoromonomer Intermediates</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Foam</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Pharmaceutical Propellants</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Propellants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Learnings__c</fullName>
        <description>Key Learnings</description>
        <inlineHelpText>Key Learnings from this &quot;In Progress&quot; or &quot;Completed&quot; Initiative</inlineHelpText>
        <label>Key Learnings</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ENGLISH</fullName>
                </value>
                <value>
                    <fullName>FRENCH</fullName>
                </value>
                <value>
                    <fullName>GERMAN</fullName>
                </value>
                <value>
                    <fullName>ITALIAN</fullName>
                </value>
                <value>
                    <fullName>SPANISH</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Main_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner of Initiative</relationshipLabel>
        <relationshipName>Initiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Main Product or Product Family this Initiative focuses on</description>
        <inlineHelpText>Main Product or Product Family this Initiative focuses on</inlineHelpText>
        <label>Main Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Initiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Cargo Covers</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Automotive Industry</fullName>
                </value>
                <value>
                    <fullName>Chemical Industrial</fullName>
                </value>
                <value>
                    <fullName>Chemicals, chem products+man-made fibres</fullName>
                </value>
                <value>
                    <fullName>Construction - General</fullName>
                </value>
                <value>
                    <fullName>Controlled Environments</fullName>
                </value>
                <value>
                    <fullName>Electrical &amp; Electronics</fullName>
                </value>
                <value>
                    <fullName>Electricity, gas and water supply</fullName>
                </value>
                <value>
                    <fullName>Emergency Response</fullName>
                </value>
                <value>
                    <fullName>Energy Solutions</fullName>
                </value>
                <value>
                    <fullName>Fire Fighting</fullName>
                </value>
                <value>
                    <fullName>Graphics and IA Packaging</fullName>
                </value>
                <value>
                    <fullName>Hard Armour Industry</fullName>
                </value>
                <value>
                    <fullName>Health and social work</fullName>
                </value>
                <value>
                    <fullName>Machinery and equipment</fullName>
                </value>
                <value>
                    <fullName>Medical Packaging</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Oil &amp; Gas</fullName>
                </value>
                <value>
                    <fullName>Other manufacturing</fullName>
                </value>
                <value>
                    <fullName>Paper, pulp, publishing, printing</fullName>
                </value>
                <value>
                    <fullName>Public admin/defence/social security</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
                <value>
                    <fullName>Remediation</fullName>
                </value>
                <value>
                    <fullName>Soft &amp; Hard Armour Industry</fullName>
                </value>
                <value>
                    <fullName>Soft Armour Industry</fullName>
                </value>
                <value>
                    <fullName>Textiles Industry</fullName>
                </value>
                <value>
                    <fullName>Thermal Industrial</fullName>
                </value>
                <value>
                    <fullName>Transport, storage and communication</fullName>
                </value>
                <value>
                    <fullName>Vehicles Protection (Air - Land - Maritime)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brochure &amp; Leaflet</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Poster</fullName>
                </value>
                <value>
                    <fullName>PR Article</fullName>
                </value>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Sales Presentation</fullName>
                </value>
                <value>
                    <fullName>Technical Data sheet</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_DB_ID__c</fullName>
        <description>Temporary ID created during migration of this content from another (legacy) system.</description>
        <label>Migration DB ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>Next Steps and milestones for this Initiative</description>
        <label>Next Steps</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objectives__c</fullName>
        <description>Measurable Objectives of this Initiative</description>
        <label>Objectives</label>
        <type>TextArea</type>
    </fields>
</CustomObject>